Fixed user photo loading in open notifications